--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2577,3 +2577,10 @@ select.form-control:focus {
   width: 20px;
   height: 20px;
 }
+
+.uploadImg 
+{
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
