--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1326,7 +1326,7 @@ select.form-control:focus {
   float: right;
 }
 .ass1-aside {
-  margin-top: 44px;
+  margin-top: 78px;
 }
 .ass1-aside__image {
   padding: 0 15px;
@@ -2604,4 +2604,14 @@ select.form-control:focus {
   padding: 2em 0;
   flex-wrap: wrap;
   align-items: center;
+}
+.img-user-header img {
+  width: 40px;
+  height: 40px;
+  border-radius: 100px;
+}
+.user-header {
+  align-items: center;
+  column-gap: 10px;
+  margin-left: 20px;
 }
