--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2240,7 +2240,7 @@ select.form-control:focus {
   left: 0;
   right: 0;
   background-color: #ffffff;
-  /* background-image: url('../images/menu-bg.jpg'); */
+  background-image: url('./images/menu-bg.jpg');
   background-position: cover;
   border-top: solid 1px #e5e9ec;
   border-bottom: solid 1px #e6e9f1;
