--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2628,3 +2628,11 @@ select.form-control:focus {
 .form-login,.form-register{
   text-align: start;
 }
+
+.show-error {
+  text-align: center;
+  margin-bottom: 1em;
+  color: #f00;
+  font-weight: 700;
+  padding: 5px;
+}
